--- a/LightYearsGame/CMakeLists.txt
+++ b/LightYearsGame/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
         ${CMAKE_CURRENT_SOURCE_DIR} include/GameFramework/GameApplication.h
         ${CMAKE_CURRENT_SOURCE_DIR} src/GameFramework/GameApplication.cpp
+        config.h.in
 )
 
 target_include_directories(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC
@@ -20,3 +21,20 @@ function(CopyLibDirToTarget LIB_NAME TARGET_NAME)
 endfunction()
 
 CopyLibDirToTarget(${LIGHT_YEARS_ENGINE_TARGET_NAME} ${LIGHT_YEARS_GAME_TARGET_NAME})
+
+set(RESOURCE_FOLDER_NAME "assets")
+set(RESOURCE_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${RESOURCE_FOLDER_NAME}")
+
+add_custom_command(
+        TARGET ${LIGHT_YEARS_GAME_TARGET_NAME}
+        POST_BUILD
+        COMMAND
+        ${CMAKE_COMMAND} -E copy_directory
+        ${RESOURCE_SRC_DIR}
+        $<TARGET_FILE_DIR:${LIGHT_YEARS_GAME_TARGET_NAME}>/${RESOURCE_FOLDER_NAME}
+)
+
+configure_file(
+    "config.h.in"
+    "${CMAKE_CURRENT_SOURCE_DIR}/include/config.h" ESCAPE_QUOTES
+)
